--- a/thesis/software.tex
+++ b/thesis/software.tex
@@ -81,7 +81,7 @@ Conceptually, the CSAC model and the filter that uses the model is two separate 
    \label{actions_core}
 \end{figure}
 
-The parser and handler are responsible for parsing data received from a client and making sure every request is protocol compliant. Once the goal of the request has been established, the request is executed. Figure \ref{server_flow} and \ref{actions_core} are block diagrams showing the execution flow for this part of the server. The protocol is explained in greater detail under section \ref{protocol}.
+The parser and handler are responsible for parsing data received from a client and making sure every request is protocol compliant. Once the goal of the request has been established, the request is executed. A function named \texttt{respond()} is called in the listening loop. Every time data is received from a client, the data is sent to the parser (\texttt{parse\_input()}) to determines the validity of the request received. Figure \ref{server_flow} and \ref{actions_core} are block diagrams showing the execution flow for this part of the server. The protocol is explained in greater detail under section \ref{protocol} and the parser is better explained under subsection \ref{parser}.
 
 \begin{itemize}
   \item A loop is entered. The loop is broken when \texttt{volatile sig\_atomic\_t done}\label{atomic_done} equals 0. This is the same variable that is used in the Server core \ref{server_core} loop and for a good reason: If the server exits, then its children should too. 
@@ -229,7 +229,6 @@ As mentioned earlier (\ref{sockets}), every time a client connects, a new proces
   linenos=true
   ]
   {c}
-    extern volatile sig_atomic_t done;
     extern struct client_table_entry *client_list;
     extern struct server_data *s_data;
     extern struct server_synchro *s_synch;
@@ -248,12 +247,19 @@ Every time a client connects, it is given a piece of shared memory where it can 
 As previously explained, the list of clients are stored in a shared memory segment using a linked list structure. In order to keep tabs on what part of the shared memory segment is in use, a simple map of the memory is used (\ref{memory_map_figure}):
 \begin{figure}
 \centering
-  \includegraphics[scale=0.3]{mem_layout}
+  \includegraphics[scale=0.3]{mem_layout.pdf}
    \caption[Memory map layout example]{Figure is showing the relation between the shared memory segment containing the client list and the memory map}
    \label{memory_map_figure}
 \end{figure} 
 
-The map is an array containing pointers to the client list segment. These pointers are offset by the size of the \texttt{client\_table\_struct} and maps 1:1 to what can be thought of as individual \textit{pieces} of memory in the client list shared memory segment. A free piece of memory is in the map represented by a pointer that is not NULL. Listing \ref{get_mem_piece} shows the function that iterates through the map to find a free piece. 
+The map is an array containing pointers to the client list segment. These pointers are offset by the size of the \texttt{client\_table\_struct} and maps 1:1 to what can be thought of as individual \textit{pieces} of memory in the client list shared memory segment. A free piece of memory is in the map represented by a pointer that is not NULL. Figure \ref{memory_map_null_figure} is an illustration showing the state of the map when four of the first pieces have been given out. Listing \ref{get_mem_piece} shows the function that iterates through the map to find a free piece. 
+
+\begin{figure}
+\centering
+  \includegraphics[scale=0.3]{mem_layout_nulls.pdf}
+   \caption[Memory map layout example]{Figure is showing the relation between the shared memory segment containing the client list and the memory map after some of the pieces of shared memory has been given out.}
+   \label{memory_map_null_figure}
+\end{figure}
 
 \begin{code}
   \caption{Sample of code showing the \texttt{get\_mem\_piece()} function.}
@@ -360,7 +366,7 @@ Having shared memory segments comes with a price. Whenever two or more processes
 Listing \ref{removeclient} shows a typical example of a function locking down access to the shared memory segment containing the list of connected clients, by using a semaphore. In the example (\ref{removeclient}) a client has been disconnected from the server and the the list of connected clients are being updated. The semaphore is necessary to make sure that another process is not attempting to read or write to the segment while the data is deleted. If another process had attempted to execute the \texttt{sem\_wait()} on the semaphore, it would have been put in a queue. Depending on the operating system, it would most likely signal the scheduler to do a context switch since the resource was busy anyway and it therefor should relinquish control of the CPU. Once the semaphores is raised, it can be lowered again by another process. It is important to note that the semaphores are not a function of, or related to the memory segments by anything other than the name. The semaphores are just "flags" used to control access to a resource. There is no automatic raising or lowering of the associated semaphores by reading or writing to a specific shared memory segment. All functions in the sensor server does however use semaphores when dealing with shared memory segments in order to avoid deadlock and race conditions.
 
 \subsection{Parser}\label{parser}
-The parser used in the Sensor Server is nothing special. Every time a client sends data to the Server, the data is sent though the parser in order to detect the purpose of the request. The parser uses the protocol and compares it with the input and looks for a match. Listing \ref{parse_id} shows a sample of code taken from the parser. 
+The parser used by the Sensor Server is a simple function. As explained in section \ref{parser_and_handler}, every time a client sends data to the Server, the data is sent though the parser in order to detect the purpose of the request. The parser uses the protocol and compares it with the input and looks for a match. Listing \ref{parse_id} shows a sample of code taken from the parser. 
 
 \begin{code}
   \caption{Part of the parser comparing the input data to the IDENTIFY command specified by the protocol}
@@ -384,7 +390,10 @@ The parser used in the Sensor Server is nothing special. Every time a client sen
   \label{parse_id}
 \end{code}
 
-The listing (\ref{parse_id}) shows how the parser attempts to find a match between the input buffer and the protocol defined IDENTIFY command. On line 6 it attempts to copy any potential parameter. The parser does not care if the parameter is missing, but it will attempt to extract it from the input buffer. If no matches are found, the function returns 0, letting the function listening to the client know that the input from the client was invalid or illegal. Comparing strings is hard work and a relatively CPU intensive task. This is why the parser sets a \textit{command code} as seen on the last line. The command code is an integer defined in the protocol, and every command has got one. The code is used by the 
+The listing (\ref{parse_id}) shows how the parser attempts to find a match between the input buffer and the protocol defined IDENTIFY command. On line 6 it attempts to copy any potential parameter. The parser does not care if the parameter is missing, but it will attempt to extract it from the input buffer. If no matches are found, the function returns 0, letting the calling function (\texttt{respond()})  know that the input from the client was invalid or illegal. Comparing strings is hard work and a relatively CPU intensive task. This is why the parser sets a \textit{command code} (\ref{command_code}) as seen on the last line. The command code is an integer defined in the protocol, and every command has got one. The code is used in the listening loop by \texttt{respond} to determine what action to perform in case a valid request. Comparing integers are "cheaper" than comparing strings.
+
+\subsection{Ready check algorithm}\label{ready_check_alg}
+Every time NMEA data is received and validated, the process that received the data will initiate a ready check. This is done by setting a flag in the client list entry called ready to 1, and calling the \texttt{nmea\_ready()} function. The \texttt{nmea\_ready()} function locks down the client linked list and iterates through it checking if the other processes are ready too. If all the other processes has received valid NMEA data from their respective client, the GNSS filters(s) are applied. If they are not ready, the lock is release and the process carries on. This means that the last process to receive NMEA data gets the job of applying the filters \footnote{Since NMEA data is generated every second by the GNSS receivers, it might be more appropriate to say that it is the scheduler that decides which process is coming in last. This of course depends on the distance between the Sensor and the Client}.
 
 \section{Protocol}\label{protocol}
 The Sensor Server protocol is quite simply a header file containing every keyword or command that the Sensor Server recognizes. The though behind it was that a client application (or script) could import the protocol header file and easily use and recognize commands used between the Server and a Client. Some constraints are also defined in the protocol header file, like maximum parameter size, maximum and minimum command size. The \textit{command codes} used by the parser, is also defined in the protocol header file. See subsection \ref{parser} for more about the use of protocol.
@@ -434,9 +443,6 @@ Listing \ref{telemetry_string} show an example of telemetry received from the CS
 \end{lstlisting}
 
 The SA.45 uses a high-resolution phase meter to improve synchronization and to calibrate the frequency of the CSAC. The phase meter measures the difference in time between the internal 1 PPS signal and the external reference, in our case a GNSS receiver. This difference is the \textit{phase} value. The CSAC uses the phase value and steering algorithms to adjust the frequency of CSAC physics package thus simultaneously steering both the phase and frequency to that of the external reference. This is called \textit{disciplining} and is how the \textit{steer} value is computed. The last value, \textit{DiscOK} is simply the status of the 1 PPS disciplining routine \cite{CSAC_USERGUIDE}.
-
-\subsection{Ready check algorithm}\label{ready_check_alg}
-Write about the ready check algorithm.
 
 \section{Data structures}
 In the C programming language, a "struct" is a complex data type that defines a list of variables to be placed under the structs given name in a block of memory. This makes it possible for multiple variables to be accessed via a single pointer. Before delving deeper into the code base of the sensor server, some crucial and often used structs will be explained in this section.
@@ -518,7 +524,7 @@ The \texttt{server\_data} struct contains information about the server. Some of 
 \end{code}
 The \texttt{server\_synchro} structs member are semaphores (\ref{shared_mem_sem}) that the server and its children processes uses to protect atomic access to shared resources. The \texttt{csac\_sem} is used to control serial access to the CSAC, making sure that only one request is sent to CSAC at a time. The \texttt{client\_list\_sem} is used by functions manipulating and reading the client list structure, and the \texttt{ready\_sem} is only used when the server has received NMEA data and a ready check has been initiated (\ref{nmea_ready}).
 
-\subsection{command\_code}
+\subsection{command\_code}\label{command_code}
 \begin{code}
   \caption{Sample of code taken from \texttt{sensor\_server\_common.h} line 34}
     \begin{minted}
@@ -536,6 +542,7 @@ The \texttt{server\_synchro} structs member are semaphores (\ref{shared_mem_sem}
     \end{minted}
   \label{command_code}
 \end{code}
+The \texttt{command\_code} struct is used by the parser \ref{parser} to more efficiently convey protocol compliant requests and related parameters.
 
 \subsection{NMEA container}\label{nmea_cont}
 \begin{code}
@@ -589,6 +596,7 @@ The \texttt{server\_synchro} structs member are semaphores (\ref{shared_mem_sem}
     \end{minted}
     \label{nmea_container}
 \end{code}
+The \texttt{nmea\_container} is used by the handler \ref{parser_and_handler} which dissects the NMEA strings and validates them before it fills the respective members of the structs. The purpose of it is just to make it easier for the other parts of the Server to use the NMEA data. 
 
 \section{The Sensor Client}\label{sensor_client}
 The sensor client software is a simple program written in C99 whose only task is to relay information read from the GNSS receivers. Summed up shortly:
